--- a/ui/app/views/users/edit.html
+++ b/ui/app/views/users/edit.html
@@ -4,7 +4,7 @@
     <button class="pull-right btn btn-danger" ng-click="remove(user)">Delete</button>
 
     <fieldset>
-        <label>Firstname</label>
+        <label>First Name</label>
         <input type="text" ng-model="user.firstName" ng-required />
 
         <label>Email</label>
